Added displaying and filtering data from the test json file

--- a/src/styles/EditableSection.css
+++ b/src/styles/EditableSection.css
@@ -1,5 +1,6 @@
 .editable-section {
   display: flex;
+  flex-wrap: wrap; /* The weather cards were scrolling off the screen to the right, so I made them wrap */
   border-radius: 15px;
   background-color: skyblue;
 }
